--- a/style.css
+++ b/style.css
@@ -1,4 +1,30 @@
 .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr 5fr;
+    height: 100vh;
+}
+
+.sidebar {
+    display: grid;
+    grid-column: 1 / 2;
+    grid-row: 1 / -1;
+    grid-template-rows: auto 1fr auto;
+}
+
+.header {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.main-content {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+li {
+    grid-template-columns: 50px 1fr;
+    list-style: none;
 }
