--- a/style.css
+++ b/style.css
@@ -20,11 +20,21 @@
 }
 
 .main-content {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+    gap: 20px;
 }
 
 li {
+    display: grid;
     grid-template-columns: 50px 1fr;
     list-style: none;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
 }
