--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     gap: 20px;
+    background-color: #e2e8f0;
+    padding: 20px;
 }
 
 li {
@@ -37,4 +39,12 @@ li {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
+}
+
+.card {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0, 1);
+    border-left: 5px solid #f0b429;
 }
